--- a/app/NovaWeb/src/modules/editorsModule/collection/editor/collectionEditor.html
+++ b/app/NovaWeb/src/modules/editorsModule/collection/editor/collectionEditor.html
@@ -21,11 +21,11 @@
             <div class="properties" ng-if="$ctrl.artifact.rapidReviewCreated">
                 <div class="collection__heading clearfix">
                     <div class="collection__heading__review__name">
-                        <i class="icon fonticon2-rapid-review"></i> {{::$ctrl.artifact.reviewName}} <a ng-href="{{::$ctrl.reviewUrl}}"
+                        <i class="icon fonticon2-rapid-review"></i> {{::$ctrl.artifact.reviewName}} <a ng-click="$ctrl.openRapidReview()"
                              class="collection__heading__link collection__heading__link__review">{{::$ctrl.reviewUrl}}</a>
                     </div>
                     <div class="collection__heading__review__edit text-right" ng-if="$ctrl.hasRequiredPermissions()">
-                        <a ng-href="Web/#/RapidReview/{{::$ctrl.artifact.id}}/edit" class="collection__heading__link">{{::$ctrl.localization.get('Artifact_Collection_Edit_Rapid_Review')}}</a>
+                        <a ng-click="$ctrl.editRapidReview()" class="collection__heading__link">{{::$ctrl.localization.get('Artifact_Collection_Edit_Rapid_Review')}}</a>
                     </div>
                 </div>
             </div>
