--- a/win_svc/ImageRenderService/ProcessHtml/index.html
+++ b/win_svc/ImageRenderService/ProcessHtml/index.html
@@ -1,44 +1,1 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta http-equiv="content-type" content="text/html;charset=utf-8">
-  <meta content="en" http-equiv="content-language">
-  <meta name="viewport" content="initial-scale=1,maximum-scale=2">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="mobile-web-app-capable" content="yes">
-  <title>Storyteller</title>
-  <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
-  <link href="./novaweb/vendor.bundle.85551c95da0331418469.css" rel="stylesheet">
-  <link href="./novaweb/app.bundle.9209069df4c181d4503a.css" rel="stylesheet">
-</head>
-
-<body>
-  <div class="process-graph-wrapper">
-    <div class="process-graph-container"></div>
-  </div>
-  <script type="text/javascript">
-    mxBasePath = "./novaweb/libs/mxClient";
-  </script>
-  <script type="text/javascript" src="./novaweb/libs/mxClient/js/mxClient.js"></script>
-  <script type="text/javascript" src="./novaweb/vendor.bundle.85551c95da0331418469.js"></script>
-  <script type="text/javascript" src="./novaweb/locales.bundle.f57519b97c068aeaf5f4.js"></script>
-  <script type="text/javascript" src="./novaweb/app.bundle.9209069df4c181d4503a.js"></script>
-<script type="text/javascript">
-    window.onload = function() {
-		window.mxUrlConverter.prototype.convert = function(url) {
-			// return url;
-			return "." + url;
-		}	
-        if (!window.cefSharp) {
-            window.console.log("CEF is not detected, running in demo mode");
-
-			var json = document.getElementById("process-data-mock").innerHTML;
-            window.renderGraph(json, 1.0);
-        }
-    };
-</script>  
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta http-equiv="content-type" content="text/html;charset=utf-8"><meta content="en" http-equiv="content-language"><meta name="viewport" content="initial-scale=1,maximum-scale=2"><meta name="apple-mobile-web-app-capable" content="yes"><meta name="mobile-web-app-capable" content="yes"><title>Storyteller</title><link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96"><link href="./novaweb/vendor.bundle.8f33999861ded9db5277.css" rel="stylesheet"><link href="./novaweb/app.bundle.be0102ca90d3b49fb774.css" rel="stylesheet"></head><body><div class="process-graph-wrapper"><div class="process-graph-container"></div></div><script type="text/javascript">mxBasePath = "./novaweb/libs/mxClient";</script><script type="text/javascript" src="./novaweb/libs/mxClient/js/mxClient.min.js"></script><script type="text/javascript" src="./novaweb/vendor.bundle.8f33999861ded9db5277.js"></script><script type="text/javascript" src="./novaweb/locales.bundle.f57519b97c068aeaf5f4.js"></script><script type="text/javascript" src="./novaweb/app.bundle.be0102ca90d3b49fb774.js"></script></body></html>
